Added links and urls to score csv file this time...

--- a/notebooks/Amazon Prediction.ipynb
+++ b/notebooks/Amazon Prediction.ipynb
@@ -2239,6 +2239,231 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "b5e6b898-a9bd-4c08-8da7-33d0bdd9c5e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r'../output/amazon_links/' # use your path\n",
+    "all_files = [x for x in os.listdir(path) if x.endswith(\".csv\")]\n",
+    "li = []\n",
+    "\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(path+filename, index_col=None, header=0)\n",
+    "    df[\"Brand\"] = filename.split(\"_\")[0]\n",
+    "    df[\"Line\"] = filename.split(\"_\")[1].split(\".\")[0]\n",
+    "    li.append(df)\n",
+    "\n",
+    "links_df = pd.concat(li, axis=0, ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f620a773-0b59-4357-997b-b46c0c462bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>URL</th>\n",
+       "      <th>Image</th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>Line</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Maui Moisture Frizz-Free + Shea Butter Leave-i...</td>\n",
+       "      <td>https://www.amazon.com/Frizz-Free-Conditioning...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81CecNEsqn...</td>\n",
+       "      <td>Maui Moisture</td>\n",
+       "      <td>All Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Maui Moisture Moisture Detoxifying + Volcanic ...</td>\n",
+       "      <td>https://www.amazon.com/Maui-Moisture-Volcanic-...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81wdvYaztx...</td>\n",
+       "      <td>Maui Moisture</td>\n",
+       "      <td>All Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Maui Moisture Detoxifying Volcanic Ash Scalp C...</td>\n",
+       "      <td>https://www.amazon.com/Maui-Moisture-Volcanic-...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81jYCQp-d3...</td>\n",
+       "      <td>Maui Moisture</td>\n",
+       "      <td>All Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Maui Moisture Detoxifying + Shampoo, Volcanic ...</td>\n",
+       "      <td>https://www.amazon.com/Maui-Moisture-Volcanic-...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81jlistGLh...</td>\n",
+       "      <td>Maui Moisture</td>\n",
+       "      <td>All Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Maui Moisture Curl Quench + Coconut Oil Ultra-...</td>\n",
+       "      <td>https://www.amazon.com/Coconut-Ultra-Hold-Styl...</td>\n",
+       "      <td>https://m.media-amazon.com/images/I/81bVSZxm3c...</td>\n",
+       "      <td>Maui Moisture</td>\n",
+       "      <td>All Products</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>333</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Sheamoisture Bar Soap for Dull, Dry Skin Cocon...</td>\n",
+       "      <td>https://www.amazon.com/SheaMoisture-Soap-Cocon...</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SheaMoisture</td>\n",
+       "      <td>Coconut and Hibiscus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>20</td>\n",
+       "      <td>SheaMoisture Body Scrub For Dull Skin Illumina...</td>\n",
+       "      <td>https://www.amazon.com/SheaMoisture-Scrub-Exfo...</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SheaMoisture</td>\n",
+       "      <td>Coconut and Hibiscus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>335</th>\n",
+       "      <td>21</td>\n",
+       "      <td>SheaMoisture In-Shower Soap and Body Wash Cond...</td>\n",
+       "      <td>https://www.amazon.com/Coconut-Hibiscus-In-Sho...</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SheaMoisture</td>\n",
+       "      <td>Coconut and Hibiscus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>336</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Shea Moisture Skin Care, Coconut &amp; Hibiscus Il...</td>\n",
+       "      <td>https://www.amazon.com/SheaMoisture-Hibiscus-I...</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SheaMoisture</td>\n",
+       "      <td>Coconut and Hibiscus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>337</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Shea Moisture Coconut &amp; Hibiscus Dead Sea Salt...</td>\n",
+       "      <td>https://www.amazon.com/Shea-Moisture-Coconut-H...</td>\n",
+       "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
+       "      <td>SheaMoisture</td>\n",
+       "      <td>Coconut and Hibiscus</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>338 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0                                            Product  \\\n",
+       "0             0  Maui Moisture Frizz-Free + Shea Butter Leave-i...   \n",
+       "1             1  Maui Moisture Moisture Detoxifying + Volcanic ...   \n",
+       "2             2  Maui Moisture Detoxifying Volcanic Ash Scalp C...   \n",
+       "3             3  Maui Moisture Detoxifying + Shampoo, Volcanic ...   \n",
+       "4             4  Maui Moisture Curl Quench + Coconut Oil Ultra-...   \n",
+       "..          ...                                                ...   \n",
+       "333          19  Sheamoisture Bar Soap for Dull, Dry Skin Cocon...   \n",
+       "334          20  SheaMoisture Body Scrub For Dull Skin Illumina...   \n",
+       "335          21  SheaMoisture In-Shower Soap and Body Wash Cond...   \n",
+       "336          22  Shea Moisture Skin Care, Coconut & Hibiscus Il...   \n",
+       "337          23  Shea Moisture Coconut & Hibiscus Dead Sea Salt...   \n",
+       "\n",
+       "                                                   URL  \\\n",
+       "0    https://www.amazon.com/Frizz-Free-Conditioning...   \n",
+       "1    https://www.amazon.com/Maui-Moisture-Volcanic-...   \n",
+       "2    https://www.amazon.com/Maui-Moisture-Volcanic-...   \n",
+       "3    https://www.amazon.com/Maui-Moisture-Volcanic-...   \n",
+       "4    https://www.amazon.com/Coconut-Ultra-Hold-Styl...   \n",
+       "..                                                 ...   \n",
+       "333  https://www.amazon.com/SheaMoisture-Soap-Cocon...   \n",
+       "334  https://www.amazon.com/SheaMoisture-Scrub-Exfo...   \n",
+       "335  https://www.amazon.com/Coconut-Hibiscus-In-Sho...   \n",
+       "336  https://www.amazon.com/SheaMoisture-Hibiscus-I...   \n",
+       "337  https://www.amazon.com/Shea-Moisture-Coconut-H...   \n",
+       "\n",
+       "                                                 Image          Brand  \\\n",
+       "0    https://m.media-amazon.com/images/I/81CecNEsqn...  Maui Moisture   \n",
+       "1    https://m.media-amazon.com/images/I/81wdvYaztx...  Maui Moisture   \n",
+       "2    https://m.media-amazon.com/images/I/81jYCQp-d3...  Maui Moisture   \n",
+       "3    https://m.media-amazon.com/images/I/81jlistGLh...  Maui Moisture   \n",
+       "4    https://m.media-amazon.com/images/I/81bVSZxm3c...  Maui Moisture   \n",
+       "..                                                 ...            ...   \n",
+       "333  https://images-na.ssl-images-amazon.com/images...   SheaMoisture   \n",
+       "334  https://images-na.ssl-images-amazon.com/images...   SheaMoisture   \n",
+       "335  https://images-na.ssl-images-amazon.com/images...   SheaMoisture   \n",
+       "336  https://images-na.ssl-images-amazon.com/images...   SheaMoisture   \n",
+       "337  https://images-na.ssl-images-amazon.com/images...   SheaMoisture   \n",
+       "\n",
+       "                     Line  \n",
+       "0            All Products  \n",
+       "1            All Products  \n",
+       "2            All Products  \n",
+       "3            All Products  \n",
+       "4            All Products  \n",
+       "..                    ...  \n",
+       "333  Coconut and Hibiscus  \n",
+       "334  Coconut and Hibiscus  \n",
+       "335  Coconut and Hibiscus  \n",
+       "336  Coconut and Hibiscus  \n",
+       "337  Coconut and Hibiscus  \n",
+       "\n",
+       "[338 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "0b8bea95-9094-453f-becb-9f37bd8b82ae",
    "metadata": {},
