Display images on web page, fix product type mapping issue in JS

--- a/notebooks/Amazon Prediction.ipynb
+++ b/notebooks/Amazon Prediction.ipynb
@@ -2259,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "f620a773-0b59-4357-997b-b46c0c462bdb",
    "metadata": {},
    "outputs": [
@@ -2284,7 +2284,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>Product</th>\n",
        "      <th>URL</th>\n",
        "      <th>Image</th>\n",
@@ -2295,7 +2294,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Maui Moisture Frizz-Free + Shea Butter Leave-i...</td>\n",
        "      <td>https://www.amazon.com/Frizz-Free-Conditioning...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/81CecNEsqn...</td>\n",
@@ -2304,7 +2302,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Maui Moisture Moisture Detoxifying + Volcanic ...</td>\n",
        "      <td>https://www.amazon.com/Maui-Moisture-Volcanic-...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/81wdvYaztx...</td>\n",
@@ -2313,7 +2310,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Maui Moisture Detoxifying Volcanic Ash Scalp C...</td>\n",
        "      <td>https://www.amazon.com/Maui-Moisture-Volcanic-...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/81jYCQp-d3...</td>\n",
@@ -2322,7 +2318,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Maui Moisture Detoxifying + Shampoo, Volcanic ...</td>\n",
        "      <td>https://www.amazon.com/Maui-Moisture-Volcanic-...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/81jlistGLh...</td>\n",
@@ -2331,7 +2326,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Maui Moisture Curl Quench + Coconut Oil Ultra-...</td>\n",
        "      <td>https://www.amazon.com/Coconut-Ultra-Hold-Styl...</td>\n",
        "      <td>https://m.media-amazon.com/images/I/81bVSZxm3c...</td>\n",
@@ -2345,11 +2339,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>333</th>\n",
-       "      <td>19</td>\n",
        "      <td>Sheamoisture Bar Soap for Dull, Dry Skin Cocon...</td>\n",
        "      <td>https://www.amazon.com/SheaMoisture-Soap-Cocon...</td>\n",
        "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
@@ -2358,7 +2350,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>334</th>\n",
-       "      <td>20</td>\n",
        "      <td>SheaMoisture Body Scrub For Dull Skin Illumina...</td>\n",
        "      <td>https://www.amazon.com/SheaMoisture-Scrub-Exfo...</td>\n",
        "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
@@ -2367,7 +2358,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>335</th>\n",
-       "      <td>21</td>\n",
        "      <td>SheaMoisture In-Shower Soap and Body Wash Cond...</td>\n",
        "      <td>https://www.amazon.com/Coconut-Hibiscus-In-Sho...</td>\n",
        "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
@@ -2376,7 +2366,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>336</th>\n",
-       "      <td>22</td>\n",
        "      <td>Shea Moisture Skin Care, Coconut &amp; Hibiscus Il...</td>\n",
        "      <td>https://www.amazon.com/SheaMoisture-Hibiscus-I...</td>\n",
        "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
@@ -2385,7 +2374,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>337</th>\n",
-       "      <td>23</td>\n",
        "      <td>Shea Moisture Coconut &amp; Hibiscus Dead Sea Salt...</td>\n",
        "      <td>https://www.amazon.com/Shea-Moisture-Coconut-H...</td>\n",
        "      <td>https://images-na.ssl-images-amazon.com/images...</td>\n",
@@ -2394,22 +2382,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>338 rows × 6 columns</p>\n",
+       "<p>338 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Unnamed: 0                                            Product  \\\n",
-       "0             0  Maui Moisture Frizz-Free + Shea Butter Leave-i...   \n",
-       "1             1  Maui Moisture Moisture Detoxifying + Volcanic ...   \n",
-       "2             2  Maui Moisture Detoxifying Volcanic Ash Scalp C...   \n",
-       "3             3  Maui Moisture Detoxifying + Shampoo, Volcanic ...   \n",
-       "4             4  Maui Moisture Curl Quench + Coconut Oil Ultra-...   \n",
-       "..          ...                                                ...   \n",
-       "333          19  Sheamoisture Bar Soap for Dull, Dry Skin Cocon...   \n",
-       "334          20  SheaMoisture Body Scrub For Dull Skin Illumina...   \n",
-       "335          21  SheaMoisture In-Shower Soap and Body Wash Cond...   \n",
-       "336          22  Shea Moisture Skin Care, Coconut & Hibiscus Il...   \n",
-       "337          23  Shea Moisture Coconut & Hibiscus Dead Sea Salt...   \n",
+       "                                               Product  \\\n",
+       "0    Maui Moisture Frizz-Free + Shea Butter Leave-i...   \n",
+       "1    Maui Moisture Moisture Detoxifying + Volcanic ...   \n",
+       "2    Maui Moisture Detoxifying Volcanic Ash Scalp C...   \n",
+       "3    Maui Moisture Detoxifying + Shampoo, Volcanic ...   \n",
+       "4    Maui Moisture Curl Quench + Coconut Oil Ultra-...   \n",
+       "..                                                 ...   \n",
+       "333  Sheamoisture Bar Soap for Dull, Dry Skin Cocon...   \n",
+       "334  SheaMoisture Body Scrub For Dull Skin Illumina...   \n",
+       "335  SheaMoisture In-Shower Soap and Body Wash Cond...   \n",
+       "336  Shea Moisture Skin Care, Coconut & Hibiscus Il...   \n",
+       "337  Shea Moisture Coconut & Hibiscus Dead Sea Salt...   \n",
        "\n",
        "                                                   URL  \\\n",
        "0    https://www.amazon.com/Frizz-Free-Conditioning...   \n",
@@ -2450,21 +2438,32 @@
        "336  Coconut and Hibiscus  \n",
        "337  Coconut and Hibiscus  \n",
        "\n",
-       "[338 rows x 6 columns]"
+       "[338 rows x 5 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "links_df = links_df.drop(df.columns[0], axis=1)\n",
     "links_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
+   "id": "49fb3192-aed6-46b7-92a7-9c4264b45094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_df = product_df.merge(links_df, left_on=[\"Product\", \"Brand\", \"Line\"], right_on=[\"Product\", \"Brand\", \"Line\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "0b8bea95-9094-453f-becb-9f37bd8b82ae",
    "metadata": {},
    "outputs": [],
